@@ -7,6 +7,7 @@ Worldmap:
 
 Installer:
   * FIX: Fixed displaying wrong backend option "-b" in summary output
+  * FIX: Don't display "update backend configuration" confirm in quiet mode
 
 1.9.4
 Core:
